[tool.poetry]
name = "Bot-service"
version = "0.1.0"
description = "Bot service for Travel Agent bot"
authors = ["lysmux <kllraz@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.2.1"
httpx = "^0.27.0"
aiogram = "^3.4.1"
aiogram-dialog = "^2.1.0"
redis = {extras = ["async"], version = "^5.0.3"}
pillow = "^10.2.0"


[tool.poetry.group.dev.dependencies]
pyright = "^1.1.354"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
